# Sentinel-pdm

./: .gitignore  DECISIONS.md  LOGBOOK.md  README.md  docker-compose.yml
machine-simulator/: .gitignore  Dockerfile  README.md  run_simulation.py
machine-simulator/Docs/: DEMO_QUICK_REFERENCE.md  DRIFT_SIMULATION_GUIDE.md  Failure_Logic_Rules.md  Master_Design_Document.md  Physics_Explanation.md  Tech_Stack.md
machine-simulator/backend/: .env.example  alembic.ini  config.py  database.py  logging_config.py  main.py  models.py  requirements.txt  schemas.py  state.py
machine-simulator/backend/ai/: prediction.py
machine-simulator/backend/alembic/: env.py
machine-simulator/backend/routers/: export.py  (+1 more)
machine-simulator/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
machine-simulator/scripts/: export_training_data.py
pdm-ai-engine/: Dockerfile  README.md  Random_Forest_Training_v2.ipynb  ai_api.py  pyproject.toml  requirements.txt  train_random_forest.py
pdm-ai-engine/models/: anomaly.joblib  classifier_metrics.json  model_performance_card_v1.md  reference_distribution.json  xgboost_v1.json
pdm-ai-engine/notebooks/: Random_Forest_Experiment.ipynb
pdm-ai-engine/src/sentinel_pdm/: config.py  database.py
pdm-ai-engine/src/sentinel_pdm/monitoring/: drift.py
pdm-ai-engine/src/sentinel_pdm/pipeline/: poll.py
pdm-ai-engine/src/sentinel_pdm/services/: api.py  predictor.py
pdm-ai-engine/src/sentinel_pdm/training/: features.py  train_anomaly.py  train_classifier.py
pdm-ai-engine/tests/: test_api.py  test_drift.py
(+82 files in other folders)
